5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1575_1559.log
== TEST (2019-03-12 21:27:36) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia"
print(frase .upper())
-- OUTPUT:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:27:41) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia"
print(frase .upper())
-- EXECUTION TIME:
0.156908
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:28:20) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:28:25) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.145684
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:28:57) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.132876
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:29:53) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase).upper()
-- EXECUTION TIME:
0.125093
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1559/main.py", line 2, in <module>
    print(frase).upper()
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:29:55) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase).upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase).upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:30:47) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase.upper)
-- EXECUTION TIME:
0.21475
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f0341b694a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:30:50) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f5b78dcd9f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:30:57) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:31:59) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase.???upper())
-- EXECUTION TIME:
0.192766
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 2
    print(frase.???upper())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:32:14) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase.???.upper())
-- EXECUTION TIME:
0.217435
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 2
    print(frase.???.upper())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:32:42) 
-- CODE:
frase = "Ada lovelance foi a primeira programadora da historia."
print(frase.???.upper())
-- ERROR:
File "XXXX", line 2
    print(frase.???.upper())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:03:31) 
-- CODE:
frase = ("Ada lovelance foi a primeira programadora da historia.")
print(frase.upper())
-- OUTPUT:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:03:35) 
-- CODE:
frase = ("Ada lovelance foi a primeira programadora da historia.")
print(frase.upper())
-- EXECUTION TIME:
0.140006
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:03:38) 
-- CODE:
frase = ("Ada lovelance foi a primeira programadora da historia.")
print(frase.upper())
-- EXECUTION TIME:
0.111725
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:03:40) 
-- CODE:
frase = ("Ada lovelance foi a primeira programadora da historia.")
print(frase.upper())
-- OUTPUT:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:42:33) 
-- CODE:

print("Ada lovelance foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.165979
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:42:35) 
-- CODE:

print("Ada lovelance foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:43:55) 
-- CODE:
frase = ("Ada lovelance foi a primeira programadora da historia.")
print(frase .upper())
-- EXECUTION TIME:
0.175507
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:43:58) 
-- CODE:
frase = ("Ada lovelance foi a primeira programadora da historia.")
print(frase .upper())
-- OUTPUT:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:29:52) 
-- CODE:
frase = ("Ada lovelance foi a primeira programadora da historia.")
print(frase .upper())
-- OUTPUT:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:29:58) 
-- CODE:
frase = ("Ada lovelance foi a primeira programadora da historia.")
print(frase .upper())
-- EXECUTION TIME:
0.123382
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:37:21) 
-- CODE:
frase = ("Ada lovelace foi a primeira programadora da historia.")
print(frase.upper())
-- EXECUTION TIME:
0.122217
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
